--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ compileTestJava {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:7.0.0",
+            "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.3")
 }
 
